postcss/testData/inspections/nesting/ruleInsideMedia.pcss
@media screen {
  div {
    color: white;
  }

  <error descr="Top level ruleset selector should not contain '&'">&</error> div {
    color: red;
  }

  <error descr="Top level ruleset selector should not contain '@nest'">@nest</error> div <error descr="Top level ruleset selector should not contain '&'">&</error> {
      color: red;
  }
}

h1 {
  @media screen {
    div {
      color: white;
    }

    <error descr="Top level ruleset selector should not contain '&'">&</error> div {
      color: red;
    }

    <error descr="Top level ruleset selector should not contain '@nest'">@nest</error> div <error descr="Top level ruleset selector should not contain '&'">&</error> {
        color: red;
    }
  }
}